helm/ecommerce/output.yaml
---
# Source: ecommerce/charts/postgresql/templates/primary/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ecommerce-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: ecommerce
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.3.0
    helm.sh/chart: postgresql-16.4.8
    app.kubernetes.io/component: primary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ecommerce
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
---
# Source: ecommerce/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-postgresql-hl
  namespace: "default"
  labels:
    app.kubernetes.io/instance: ecommerce
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.3.0
    helm.sh/chart: postgresql-16.4.8
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: ecommerce
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: ecommerce/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: ecommerce
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.3.0
    helm.sh/chart: postgresql-16.4.8
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/instance: ecommerce
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
# Source: ecommerce/templates/api-gateway-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-gateway

spec:

  selector:
    app: api-gateway

  ports:

  - port: 8082

    targetPort: 8082

  type: ClusterIP
---
# Source: ecommerce/templates/config-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: config-server

spec:

  selector:
    app: config-server

  ports:

  - port: 8888

    targetPort: 8888

  type: ClusterIP
---
# Source: ecommerce/templates/discovery-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: discovery-server

spec:

  selector:
    app: discovery-server

  ports:

  - port: 8761

    targetPort: 8761

  type: ClusterIP
---
# Source: ecommerce/templates/inventory-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: inventory-service

spec:

  selector:
    app: inventory-service

  ports:

  - port: 8086

    targetPort: 8086

  type: ClusterIP
---
# Source: ecommerce/templates/notification-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: notification-service

spec:

  selector:
    app: notification-service

  ports:

  - port: 8089

    targetPort: 8089

  type: ClusterIP
---
# Source: ecommerce/templates/order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service

spec:

  selector:
    app: order-service

  ports:

  - port: 8087

    targetPort: 8087

  type: ClusterIP
---
# Source: ecommerce/templates/payment-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: payment-service

spec:

  selector:
    app: payment-service

  ports:

  - port: 8088

    targetPort: 8088

  type: ClusterIP
---
# Source: ecommerce/templates/product-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-service

spec:

  selector:
    app: product-service

  ports:

  - port: 8084

    targetPort: 8084

  type: ClusterIP
---
# Source: ecommerce/templates/user-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-service

spec:

  selector:
    app: user-service

  ports:

  - port: 8083

    targetPort: 8083

  type: ClusterIP
---
# Source: ecommerce/templates/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:

      - name: api-gateway

        image: "api-gateway:1.0"

        imagePullPolicy: Never

        ports:

        - containerPort: 8082
---
# Source: ecommerce/templates/config-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: config-server

spec:
  replicas: 1

  selector:
    matchLabels:
      app: config-server

  template:

    metadata:
      labels:
        app: config-server

    spec:

      containers:

      - name: config-server

        image: "config-server:1.0"

        imagePullPolicy: Never

        ports:

        - containerPort: 8888
---
# Source: ecommerce/templates/discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: discovery-server

spec:
  replicas: 1

  selector:
    matchLabels:
      app: discovery-server

  template:

    metadata:
      labels:
        app: discovery-server

    spec:

      containers:

      - name: discovery-server

        image: "discovery-server:1.0"

        imagePullPolicy: Never

        ports:

        - containerPort: 8761
---
# Source: ecommerce/templates/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: inventory-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: inventory-service

  template:
    metadata:
      labels:
        app: inventory-service

    spec:
      containers:
        - name: inventory-service

          image: "inventory-service:1.1"

          imagePullPolicy: Never

          ports:
            - containerPort: 8086
---
# Source: ecommerce/templates/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:
      - name: notification-service
        image: "notification-service:1.2"
        imagePullPolicy: Never

        ports:
        - containerPort: 8089
---
# Source: ecommerce/templates/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-service

  template:

    metadata:
      labels:
        app: order-service

    spec:

      containers:

      - name: order-service

        image: "order-service:1.1"

        imagePullPolicy: Never

        ports:

        - containerPort: 8087
---
# Source: ecommerce/templates/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: payment-service

  template:

    metadata:
      labels:
        app: payment-service

    spec:

      containers:

      - name: payment-service

        image: "payment-service:1.2"

        imagePullPolicy: Never

        ports:

        - containerPort: 8088
---
# Source: ecommerce/templates/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: product-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: product-service

  template:
    metadata:
      labels:
        app: product-service

    spec:
      containers:
        - name: product-service

          image: "product-service:1.0"
          imagePullPolicy: Never

          ports:
            - containerPort: 8084
---
# Source: ecommerce/templates/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service

          image: "user-service:1.1"
          imagePullPolicy: Never

          ports:
            - containerPort: 8083
---
# Source: ecommerce/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ecommerce-postgresql
  namespace: "default"
  labels:
    app.kubernetes.io/instance: ecommerce
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.3.0
    helm.sh/chart: postgresql-16.4.8
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: ecommerce-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: ecommerce
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: ecommerce-postgresql
      labels:
        app.kubernetes.io/instance: ecommerce
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 17.3.0
        helm.sh/chart: postgresql-16.4.8
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: ecommerce-postgresql
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: ecommerce
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:17.3.0-debian-12-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -d "dbname=ecommerce" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "postgres" -d "dbname=ecommerce" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/tmp
              subPath: app-tmp-dir
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "5Gi"
---
# Source: ecommerce/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx

  rules:

  - host: ecommerce.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: api-gateway

            port:

              number: 8082
